Fix links and some alignment

--- a/css/landing.scss
+++ b/css/landing.scss
@@ -114,6 +114,7 @@ $gradient_center: #105dad;
         li {
           display: inline-block;
           text-transform: uppercase;
+          vertical-align: middle;
 
           a {
             color: white;
